Made everything in Create SPG match the spec again, with some related changes in common. Test pass.